moving to pytests for grading assignemts

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,14 @@ __pycache__
 *.pyc
 .DS_Store
 tags
-errors.out
-/*/grader/ps*
-/*/grader/*.zip
-/*/*.json
-inputs.json
-outputs.json
+_*.json
+results/
+*.zip
+*.log
+*/*/ps*
+*/*/Pipfile*
+*/*/conftest*
+*/*/run*
+*/*/*.sh
+*/*/__init__.py
+*/run_autograder
