--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,12 @@ name = "pypi"
 
 [packages]
 pycryptodome = "*"
+pytest = "*"
+pytest-subtests = "*"
+pdbpp = "*"
+dataclasses = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.6"
