--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@ test/
 *.zip
 *.log
 */*/ps*
+*/*/fencrypt
 */*/Pipfile*
 */*/conftest*
 */*/run*
-*/*/*.sh
+*/*/setup.sh
 */*/__init__.py
 */run_autograder
+Session.vim
